ingress/nemo-customizer/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nemo-customizer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nemo-customizer.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nemo-customizer-api 
                port:
                  number: 8000
